// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`правильно рисует компонент без саджеста 1`] = `
<Fragment>
  <TextInput
    autocomplete="off"
    className="PhoneInput Foo"
    disabled={false}
    error={false}
    hasClear={true}
    maxLength={16}
    name="phone"
    onChange={[Function]}
    onClearClick={[Function]}
    onFocusChange={[Function]}
    placeholder="Номер телефона"
    radius="r8"
    size="l"
    type="tel"
    value="+7 998 123-45-67"
    valueProcessor={[Function]}
  />
</Fragment>
`;

exports[`правильно рисует компонент с саджестом 1`] = `
<Fragment>
  <PhoneInputWithSuggest
    autocomplete="off"
    className="PhoneInput Foo"
    defaultSuggestIndex={0}
    disabled={false}
    error={false}
    hasClear={true}
    hasInitialFocus={false}
    initialValue="+7 998 123-45-67"
    name="phone"
    onChange={[Function]}
    onClearClick={[Function]}
    onFocusChange={[Function]}
    onSelect={[Function]}
    placeholder="Номер телефона"
    showSuggestForEmptyFields={true}
    size="l"
    suggest={
      Array [
        "79981234567",
        "79881234567",
        "79891234567",
      ]
    }
    suggestsTheme="default"
    type="tel"
    width="full"
  />
</Fragment>
`;
